force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Principal_Investigator_First_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Principal_Investigator_First_Name__c</fullName>
    <formula>I_RS_Principal_Investigator_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Principal Investigator First Name</label>
    <type>Text</type>
</CustomField>