force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Request_Status__c</fullName>
    <inlineHelpText>This is the status corresponds with the ethics request status at the top of the page. If this status is ‘draft’ this means the researcher has an action to complete. Populated by the Research Office.</inlineHelpText>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>