force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Requestor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ethics Requests (Requestor Name)</relationshipLabel>
    <relationshipName>Ethics_Requests_As_Requestor</relationshipName>
    <type>Lookup</type>
</CustomField>