force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Research_Office_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Office_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The email address to contact if you have questions. Populated by the Research Office.</inlineHelpText>
    <label>Research Office Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ethics_Requests_Research_office_contact</relationshipName>
    <type>Lookup</type>
</CustomField>