force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Researcher_Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Researcher_Portal_URL__c</fullName>
    <description>Hyperlink to record in PRIME researcher portal. Used in email templates</description>
    <formula>$Setup.URL_Variable__c.I_RS_Researcher_Portal_Base_URL__c + &quot;/detail/&quot; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Researcher Portal URL</label>
    <type>Text</type>
</CustomField>