force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Reviewers__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Reviewers__c</fullName>
    <label>Reviewers</label>
    <type>TextArea</type>
</CustomField>