force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Revision_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Revision_Due_Date__c</fullName>
    <inlineHelpText>This is the date the SOP/Phenotype report is to be reviewed by to make sure the content is still current. The Research Office will populate this field.</inlineHelpText>
    <label>Revision Due Date</label>
    <type>Date</type>
</CustomField>