force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Sensitive_Data__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Sensitive_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If ticked this indicates your research project collects this type of data. Populated by the Research Office.</inlineHelpText>
    <label>Sensitive Data</label>
    <type>Checkbox</type>
</CustomField>