force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Site_Name__c</fullName>
    <inlineHelpText>A list of sites where the approved research will be conducted. This is populated by the Research Office.</inlineHelpText>
    <label>Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>