force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Site_where_Research_is_Conducted__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Site_where_Research_is_Conducted__c</fullName>
    <inlineHelpText>These are the site/s where the research project will be conducted and the same site/s listed in your ethics approval. This field is used by the Research Office to make sure all contracts and insurance requirements are in place.</inlineHelpText>
    <label>Site where Research is Conducted</label>
    <type>TextArea</type>
</CustomField>