force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Species__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Species__c</fullName>
    <inlineHelpText>List all species for this research project.  If left blank, the Research Office will populate.</inlineHelpText>
    <label>Species</label>
    <type>TextArea</type>
</CustomField>