force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the Organisation who has agreed to be the Sponsor. Populated by the Research Office.</inlineHelpText>
    <label>Sponsor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ethics Requests (Sponsor)</relationshipLabel>
    <relationshipName>Ethics_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>