force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Sponsor_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Sponsor_Type__c</fullName>
    <inlineHelpText>This is the type of Sponsor used by the Research Office to complete all governance requirements . Populated by the Research Office.</inlineHelpText>
    <label>Sponsor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Projects Sponsored by La Trobe</fullName>
            </value>
            <value>
                <fullName>Projects Sponsored by another organisation</fullName>
            </value>
            <value>
                <fullName>Commercial/Industry Sponsored projects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>