force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Target_Participant_Numbers__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Target_Participant_Numbers__c</fullName>
    <inlineHelpText>The target participant numbers. This is populated by the Research Office.</inlineHelpText>
    <label>Target Participant Numbers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>