force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Tasks_with_Milestone_Status_Green__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Tasks_with_Milestone_Status_Green__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of related Milestone Tasks with a green traffic light</description>
    <label>Tasks with Milestone Status Green</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>