force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Tasks_with_Milestone_Status_Red__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Tasks_with_Milestone_Status_Red__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of related Milestone Tasks with a red traffic light</inlineHelpText>
    <label>Tasks with Milestone Status Red</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>