force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Time_To_Approval__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Time_To_Approval__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of calendar days since the meeting closing date</description>
    <inlineHelpText>Cumulative total of all days the ethics request was ‘assigned for review’ (ethics review outcome field). This field is automatically calculated when the status changes.</inlineHelpText>
    <label>Time To Decision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>