force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Trial_Description__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Trial_Description__c</fullName>
    <inlineHelpText>A brief description of the clinical trial. This is populated by the Research Office.</inlineHelpText>
    <label>Trial Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>