force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Type__c</fullName>
    <inlineHelpText>Displays if it is a Standard Operating Procedure or Phenotype Report. Populated by the Research Office.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Research SOP</fullName>
            </value>
            <value>
                <fullName>Phenotype Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>