force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Waiver_of_Consent__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Waiver_of_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This box is ticked when a waiver of consent has been requested. This is populated by the Research Office.</inlineHelpText>
    <label>Waiver of Consent</label>
    <type>Checkbox</type>
</CustomField>