force-app/main/default/objects/Ethics_Request__c/fields/I_RS_Waiver_of_Consent_Reasons__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Waiver_of_Consent_Reasons__c</fullName>
    <inlineHelpText>A list of the reason/s why a waiver of consent has or hasn’t been approved by the Committee. This is populated by the Research Office.</inlineHelpText>
    <label>Waiver of Consent Reasons</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>