force-app/main/default/objects/Ethics_Request__c/fields/I_RS_With_Ethics_Team_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_With_Ethics_Team_Date__c</fullName>
    <label>With Ethics Team Date</label>
    <type>Date</type>
</CustomField>