force-app/main/default/objects/Ethics_Request__c/fields/Principal_Investigator_is_logged_in_user__c.field-meta.xml
<CustomField>
    <fullName>Principal_Investigator_is_logged_in_user__c</fullName>
    <formula>IF ( I_RS_Principal_Investigator__r.Id = $User.Id , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Principal Investigator is logged in user</label>
    <type>Checkbox</type>
</CustomField>