force-app/main/default/objects/Ethics_Request__c/recordTypes/Animal_Ethics_Application.recordType-meta.xml
<RecordType>
    <fullName>Animal_Ethics_Application</fullName>
    <active>true</active>
    <label>Animal Ethics Application</label>
</RecordType>