force-app/main/default/objects/Ethics_Request__c/recordTypes/Biosafety_Ethics_Application.recordType-meta.xml
<RecordType>
    <fullName>Biosafety_Ethics_Application</fullName>
    <active>true</active>
    <label>Institutional Biosafety Committee</label>
</RecordType>