force-app/main/default/objects/Ethics_Request__c/recordTypes/Human_Ethics_Application.recordType-meta.xml
<RecordType>
    <fullName>Human_Ethics_Application</fullName>
    <active>true</active>
    <label>Human Ethics Application</label>
</RecordType>