force-app/main/default/objects/Ethics_Request__c/recordTypes/I_RS_SOP_Phenotype_Report.recordType-meta.xml
<RecordType>
    <fullName>I_RS_SOP_Phenotype_Report</fullName>
    <active>true</active>
    <label>SOP/Phenotype Report</label>
</RecordType>