force-app/main/default/objects/Ethics_Request__c/recordTypes/Research_Governance_Authorisation.recordType-meta.xml
<RecordType>
    <fullName>Research_Governance_Authorisation</fullName>
    <active>true</active>
    <label>Externally Approved Application</label>
</RecordType>