force-app/main/default/objects/Ethics_Request__c/validationRules/WoC_Reasons_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>WoC_Reasons_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>I_RS_Waiver_of_Consent__c = TRUE &amp;&amp;
LEN(I_RS_Waiver_of_Consent_Reasons__c) = 0</errorConditionFormula>
    <errorDisplayField>I_RS_Waiver_of_Consent_Reasons__c</errorDisplayField>
    <errorMessage>Please enter a value to proceed.</errorMessage>
</ValidationRule>