force-app/main/default/objects/Ethics_Request__c/listViews/All_New_Applications.listView-meta.xml
<ListView>
    <fullName>All_New_Applications</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Principal_Investigator_Contact__c</columns>
    <columns>I_RS_Milestone_Task_Status__c</columns>
    <columns>I_RS_Ethics_Application_Review_Outcome__c</columns>
    <columns>I_RS_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_RS_Status__c</field>
        <operation>equals</operation>
        <value>Draft,Review by Research Office</value>
    </filters>
    <label>All New Applications</label>
</ListView>