force-app/main/default/objects/Ethics_Request__c/listViews/Biosafety_Ethics_Queue_Ethics_Request.listView-meta.xml
<ListView>
    <fullName>Biosafety_Ethics_Queue_Ethics_Request</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Principal_Investigator_Contact__c</columns>
    <columns>I_RS_Milestone_Task_Status__c</columns>
    <columns>I_RS_Ethics_Application_Review_Outcome__c</columns>
    <columns>I_RS_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Ethics_Request__c.Biosafety_Ethics_Application</value>
    </filters>
    <label>IBC Ethics</label>
</ListView>