force-app/main/default/objects/Ethics_Request__c/listViews/LARTF_Portal.listView-meta.xml
<ListView>
    <fullName>LARTF_Portal</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Principal_Investigator__c</columns>
    <columns>I_RS_Ethics_Application_Review_Outcome__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>I_RS_Status__c</columns>
    <columns>I_RS_Ethics_Application_Approval_Date__c</columns>
    <columns>I_RS_Ethics_Application_Title__c</columns>
    <columns>I_RS_Ethics_Application_Expiry_Date__c</columns>
    <columns>I_RS_Milestone_Task_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_RS_Ethics_Application_Review_Outcome__c</field>
        <operation>equals</operation>
        <value>Approved,Expired,Suspended</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Ethics_Request__c.Animal_Ethics_Application,Ethics_Request__c.Biosafety_Ethics_Application,Ethics_Request__c.I_RS_SOP_Phenotype_Report</value>
    </filters>
    <label>LARTF Portal</label>
</ListView>