force-app/main/default/objects/Ethics_Request__c/listViews/Phenotype_Reports.listView-meta.xml
<ListView>
    <fullName>Phenotype_Reports</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Ethics_Application_Title__c</columns>
    <columns>I_RS_Principal_Investigator__c</columns>
    <columns>I_RS_Status__c</columns>
    <columns>I_RS_Ethics_Application_Review_Outcome__c</columns>
    <columns>I_RS_Ethics_Application_Approval_Date__c</columns>
    <columns>I_RS_Ethics_Application_Expiry_Date__c</columns>
    <columns>I_RS_Milestone_Task_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_RS_Ethics_Application_Review_Outcome__c</field>
        <operation>notEqual</operation>
        <value>Closed-off</value>
    </filters>
    <filters>
        <field>I_RS_Type__c</field>
        <operation>equals</operation>
        <value>Phenotype Report</value>
    </filters>
    <label>Phenotype Reports</label>
</ListView>