force-app/main/default/objects/Ethics_Request__c/listViews/SOP_Phenotype_Reports.listView-meta.xml
<ListView>
    <fullName>SOP_Phenotype_Reports</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Principal_Investigator_Contact__c</columns>
    <columns>I_RS_Milestone_Task_Status__c</columns>
    <columns>I_RS_Ethics_Application_Review_Outcome__c</columns>
    <columns>I_RS_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Ethics_Request__c.I_RS_SOP_Phenotype_Report</value>
    </filters>
    <label>SOP/Phenotype Reports</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Vice_Chancellor</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>